fix cards aligned in center

--- a/src/main/webapp/app/job/job-overview/job-card-list/job-card-list.component.scss
+++ b/src/main/webapp/app/job/job-overview/job-card-list/job-card-list.component.scss
@@ -1,9 +1,13 @@
 .job-card-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 20rem));
+  display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   padding: 1rem 5rem;
   justify-content: center;
+}
+.job-card-grid > * {
+  flex: 0 0 auto;
+  width: clamp(15rem, 20vw, 20rem);
 }
 .no-jobs-text {
   text-align: center;
